--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -4,19 +4,109 @@
     Change Password
 {% endblock %}
 
+
+
 {% block body_block %}
-<div class="jumbotron p-4">
+<style>
+    #fieldtitle {
+        font-size:30px;
+    }
+
+    #reminder{
+        text-indent: 50px;
+        color: rgb(20, 6, 82);
+        font-size:15px;
+    }
+</style>
+
+<script type="text/javascript">  
+    var passwordvalidate = function() {
+      if (document.getElementById('id_new_password1').value == document.getElementById('id_new_password2').value) {
+             document.getElementById('validationmessage').style.color = 'green';
+             document.getElementById('validationmessage').innerHTML = 'Password Matched';
+     } else {
+             document.getElementById('validationmessage').style.color = 'red';
+             document.getElementById('validationmessage').innerHTML = 'Password not match';
+             }
+     }
+
+     
+ </script>
+
+
+
+
+
+<div class="container pt-5">
     <div class="container">
-        <h1>Change Password</h1>
-     </div>
+        <h class = "display-4 text-danger">
+            Change Password</h>
+    </div>
 </div>
+<div container pt-5></div>
 
 
-<form method="post" action=".">
-    {% csrf_token %}
-    {{ form.as_p }}
+<div class="container pt-5">
+    <div class="col-md-12">
+        <form class="form-horizontal" role="form" method="post" action="." >
+            {% csrf_token %}
 
-    <input type="submit" value="password_change" />
-</form>
+            <div class ="row">
+                <div class="col-sm-5">
+                    <label id = "fieldtitle">Old Password:</p>
+                </div>
+                <div class="col-sm-4">
+                    <input class="form-control" id="form.old_password" name="form.old_password" type="password" onkeyup='passwordvalidate();' placeholder="required" required/>
+                    <span class="helptext" style="color:red">
+                        {{form.old_password.errors}} 
+                    </span>
+                </div>
+            </div>
+
+
+            <div class ="row">
+                <div class="col-sm-5">
+                    <label id = "fieldtitle">New Password:</p>
+                </div>
+                <div class="col-sm-4">
+                    <input class="form-control" id="id_new_password1" name="id_new_password1" type="password" onkeyup='passwordvalidate();' placeholder="required" required/>
+                    <span class="helptext" style="color:red">
+                        {{form.new_password1.errors}} 
+                    </span>
+                </div>
+            </div>
+
+            <div class ="row">
+                <p id="reminder">The new password should have at least 8 characters and should be a combination of numbers and characters.</p>
+            </div>
+
+            <div class ="row">
+                <div class="col-sm-5">
+                    <label for="id_new_password2" id = "fieldtitle">New Password Confirmation:</p>
+                </div>
+                <div class="col-sm-4">
+                    <input class="form-control" id="id_new_password2" name="id_new_password2" type="password" onkeyup='passwordvalidate();' placeholder="required" required/>
+                    <span id='validationmessage'></span>
+                    <span class="helptext" style="color:red">
+                        {{form.new_password2.errors}} 
+                    </span>
+                </div>
+            </div>
+                
+            <div class ="row">
+                <p id="reminder">Please enter your new password for confirmation.</p>
+            </div>
+
+            </div>
+            
+            <div class="row">  
+                <div class="pt-5 col-sm-12 col-md-12 col-xs-12">  
+                    <div class="float-right">
+                        <button class="btn btn-primary" type="submit">Change Password</button>
+                        </form>
+                        <a href="{% url 'rango:index' %}" class="btn btn-danger" role="button">Cancel</a>
+                    </div>  
+                </div>  
+            </div>
 
 {% endblock %}
