--- a/templates/rango/page.html
+++ b/templates/rango/page.html
@@ -23,6 +23,7 @@
     .comment_like {
         float: left;
     }
+
     .likebutton, .dislikebutton {
         background-color: Transparent;
         background-repeat:no-repeat;
@@ -44,6 +45,11 @@
 
     .dislikebutton:hover {
         color: rgb(204, 19, 19);
+    }
+
+    #views_num ,#page_like {
+        float: left;
+        margin-right: 20px;
     }
 
 </style>
@@ -92,12 +98,6 @@
                 </div>
 
                 <div>
-                    <p>
-                        Views: {{ page.views }}
-                    </p>
-                </div>
-
-                <div>
                     {% if page.uploader %}
                     <p>
                         Uploaded by: <a href ="{% url 'rango:profile' page.uploader%}">{{ page.uploader }}</a>
@@ -105,7 +105,6 @@
                     {% endif %}
                 </div>
 
-            
                 <div>
                     {% if page.tag == "Beginner"%}
                         Tag: <span class="tag" id="beginner_tag">{{ page.tag }}</span>
@@ -128,20 +127,29 @@
 
                 <br/>
 
-                <div>
-                <form id="like_form" action="{% url 'rango:like_page' page.pk %}" method="POST">
-                    {% csrf_token%}
-                    {% if user.is_authenticated %}
-                        {% if not liked %}
-                            <button class="likebutton fa fa-thumbs-up" type="submit", name="page_id", value="{{ page.id }}"></button> 
-                        {% else %}
-                            <button class="dislikebutton fa fa-thumbs-down" type="submit", name="page_id", value="{{ page.id }}"></button> 
-                        {% endif %}
-                    {% else %}
-                        <a href="{% url 'auth_login' %}">Login</a> to like
-                    {% endif %}
-                    - {{ likes_count }} Likes
-                </form>
+                <div id="vlb">
+                    <div id="views_num">
+                        <p>
+                            Views: {{ page.views }}  
+                        </p>
+                    </div>
+
+                    <div id="page_like">
+                        <span>Likes: {{ likes_count }}
+                        <form id="like_form" action="{% url 'rango:like_page' page.pk %}" method="POST">
+                            {% csrf_token%}
+                            {% if user.is_authenticated %}
+                                {% if not liked %}
+                                    <button class="likebutton fa fa-thumbs-up" type="submit", name="page_id", value="{{ page.id }}"></button> 
+                                {% else %}
+                                    <button class="dislikebutton fa fa-thumbs-down" type="submit", name="page_id", value="{{ page.id }}"></button> 
+                                {% endif %}
+                            {% else %}
+                                <a href="{% url 'auth_login' %}">Login</a> to like
+                            {% endif %}
+                        </form>
+                        </span>
+                    </div>
                 </div>
 
                 <div>
@@ -169,14 +177,14 @@
 
                             <div class="comment_like">
                             {% if user.is_authenticated %}
+                                Likes: {{ comment.likes.count }}
                                 <form id="cmlike_form" action="{% url 'rango:like_comment' comment.pk %}" method="POST">
-                                    {% csrf_token %}
+                                        {% csrf_token %}
                                         {% if user not in comment.likes.all %}
                                             <button class="likebutton fa fa-thumbs-up" type="submit", name="comment_id", value="{{ comment.id }}"></button>
                                         {% else %}
                                             <button class="dislikebutton fa fa-thumbs-down" type="submit", name="comment_id", value="{{ comment.id }}"></button>
                                         {% endif %}
-                                    - {{ comment.likes.count }} Likes
                                 </form>
                             </div>
 
