Fixed minor issue

--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,9 +1,21 @@
 {% extends "rango/base.html" %}
 
 {% block body_block %}
-<div class="jumbotron p-4">
+
+
+<div class="container pt-5">
     <div class="container">
-        <p>Password changed</p>
+        <h class = "display-4 text-danger">
+            Change Password</h>
     </div>
 </div>
+<div class="container pt-5">
+        <div class ="row">
+            <div class="col-sm-8">
+                <h2>Your password has successfully changed!</h2>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
