--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -45,68 +45,72 @@
 </div>
 <div container pt-5></div>
 
-
 <div class="container pt-5">
+    <div class="form-group">
     <div class="col-md-12">
-        <form class="form-horizontal" role="form" method="post" action="." >
-            {% csrf_token %}
 
-            <div class ="row">
-                <div class="col-sm-5">
-                    <label id = "fieldtitle">Old Password:</p>
-                </div>
-                <div class="col-sm-4">
-                    <input class="form-control" id="form.old_password" name="form.old_password" type="password" onkeyup='passwordvalidate();' placeholder="required" required/>
-                    <span class="helptext" style="color:red">
-                        {{form.old_password.errors}} 
-                    </span>
-                </div>
+        <form method="post" action=".">
+        {% csrf_token %}
+
+        <div class ="row">
+            <div class="col-sm-5">
+                <label for="id_old_password"  id = "fieldtitle">Old password:</label>
             </div>
+            <div class="col-sm-4">
+                <input type="password" name="old_password" class="form-control" required="" id="id_old_password">
+                <span class="helptext" style="color:red">
+                    {{form.old_password.errors}} 
+                </span>
+            </div>
+        </div>
+    
+
+        <div class ="row">
+            <div class="col-sm-5">
+                <label for="id_new_password1" id = "fieldtitle">New password:</label> 
+            </div>
+            <div class="col-sm-4">
+                <input type="password" class="form-control" name="new_password1" required="" id="id_new_password1" onkeyup='passwordvalidate();' > 
+                <span class="helptext"> {{form.id_new_password1.errors}} </span>
+                    {{form.id_new_password1.errors}} 
+                </span>
+            </div>
+        </div>
+
+        <div class ="row">
+            <p id="reminder">The new password should have at least 8 characters and should be a combination of numbers and characters.</p>
+        </div>
 
 
-            <div class ="row">
-                <div class="col-sm-5">
-                    <label id = "fieldtitle">New Password:</p>
-                </div>
-                <div class="col-sm-4">
-                    <input class="form-control" id="id_new_password1" name="id_new_password1" type="password" onkeyup='passwordvalidate();' placeholder="required" required/>
-                    <span class="helptext" style="color:red">
-                        {{form.new_password1.errors}} 
-                    </span>
-                </div>
+        <div class ="row">
+            <div class="col-sm-5">
+                <label for="id_new_password2" id = "fieldtitle">New password confirmation:</label>
             </div>
+            <div class="col-sm-4">
+                <input type="password" name="new_password2" required="" class="form-control" id="id_new_password2" onkeyup='passwordvalidate();' > 
+                <br><span id='validationmessage'></span>
+                <span class="helptext" style="color:red">
+                    {{form.id_new_password2.errors}} 
+                </span>
+            </div>
+        </div>
 
-            <div class ="row">
-                <p id="reminder">The new password should have at least 8 characters and should be a combination of numbers and characters.</p>
-            </div>
+        <div class ="row">
+            <p id="reminder">Please enter your new password for confirmation.</p>
+        </div>
+        
 
-            <div class ="row">
-                <div class="col-sm-5">
-                    <label for="id_new_password2" id = "fieldtitle">New Password Confirmation:</p>
-                </div>
-                <div class="col-sm-4">
-                    <input class="form-control" id="id_new_password2" name="id_new_password2" type="password" onkeyup='passwordvalidate();' placeholder="required" required/>
-                    <span id='validationmessage'></span>
-                    <span class="helptext" style="color:red">
-                        {{form.new_password2.errors}} 
-                    </span>
-                </div>
-            </div>
-                
-            <div class ="row">
-                <p id="reminder">Please enter your new password for confirmation.</p>
-            </div>
 
-            </div>
-            
-            <div class="row">  
-                <div class="pt-5 col-sm-12 col-md-12 col-xs-12">  
-                    <div class="float-right">
-                        <button class="btn btn-primary" type="submit">Change Password</button>
-                        </form>
-                        <a href="{% url 'rango:index' %}" class="btn btn-danger" role="button">Cancel</a>
-                    </div>  
+        <div class="row">  
+            <div class="pt-5 col-sm-12 col-md-12 col-xs-12">  
+                <div class="float-right">
+                    <button class="btn btn-primary" type="submit" value="submit">Change Password</button>
+                    </form>
+                    <a href="{% url 'rango:index' %}" class="btn btn-danger" role="button">Cancel</a>
                 </div>  
-            </div>
+            </div>  
+        </div>
+
+
 
 {% endblock %}
