--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -69,7 +69,7 @@ Unknown Category
 
     <!--comment part-->
     <div class='col-md-3 border'>
-        Comment...
+        Comment..
     </div>
 
 </div>
