add tag to category

--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -10,6 +10,7 @@
     <meta name="description" content="ITech project">
     <meta name="author" content="group caffine">
     <link rel="icon" href="{% static 'images/rango.jpg' %}">
+    <link href="{% static 'rango_css/tag.css' %}" rel="stylesheet">
     <!--get boostrsp-->
     <link href="https://getbootstrap.com/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
