--- a/templates/rango/page.html
+++ b/templates/rango/page.html
@@ -21,6 +21,7 @@
         border-color: rgb(12, 206, 255);
         border-width: 1px;
         border-radius: 24px;
+        background-color: rgb(232, 247, 252);
         padding: 24px;
         margin: 24px;
         margin-left: 0px;
@@ -83,7 +84,7 @@
     }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="{% static 'rango_css/tag.css' %}" rel="stylesheet">
+
 <script>
     $('#page_id').onclick(function () {
         var title=request.page.title
