--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -64,6 +64,18 @@
             </div>
         </div>
     
+        
+        
+        <!--<div class ="row">
+            <div class="col-sm-5">
+                <label for="id_new_password1">New password:</label>
+            </div>
+                <input type="password" name="id_new_password1" required="" id="id_new_password1">
+                <span class="helptext" style="color:red">
+                    {{form.id_new_password1.errors}} 
+                </span>
+            </div>
+        </div>-->
 
         <div class ="row">
             <div class="col-sm-5">
