--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -11,15 +11,17 @@
     <meta name="author" content="group caffine">
     <link rel="icon" href="{% static 'images/rango.jpg' %}">
     <link href="{% static 'rango_css/tag.css' %}" rel="stylesheet">
+    <!-- CSS -->
+    <link href="{% static 'rango_css/base_style.css' %}" rel="stylesheet">
+
+
     <!--get boostrsp-->
     <link href="https://getbootstrap.com/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!--
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     -->
-    <!-- CSS 
-    <link href="{% static 'rango_css/base_style.css' %}" rel="stylesheet">
--->
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- JavaScript -->
@@ -38,11 +40,22 @@
             text-decoration: none;
             margin: 5px 5px;
         }
-
-        .fa-twitter {
-            background: #55ACEE;
-            color: white;
+        .fa-github {
+            font-size:24px
         }
+
+        .sidebar-sticky{
+            color:whitesmoke
+        }
+
+        #githubURL{
+            color:black
+        }
+
+        #register_link{
+            color:grey
+        }
+
     </style>
     <title>
         Rango -
@@ -60,9 +73,9 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg bg-light" id='top_nav_bar'>
         <!--LHS logo-->
-        <a class="navbar-brand p-2" href="{% url 'rango:index' %}">Rango</a>
+        <a class="navbar-brand p-2" href="{% url 'rango:index' %}">Extended Rango</a>
 
         <!--for collapse when screen too small-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
@@ -96,15 +109,13 @@
                     </form>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'registration_register' %}">Register Here <span
+                    <a id='register_link' class="nav-link" href="{% url 'registration_register' %}">Register Here <span
                             class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Or Login in using</a>
-                </li>
-                <li><a href="#" method='post' class="fa fa-twitter"></a></li>
-
-                <li><a href="{% url 'social:begin' 'github' %}">Login with GitHub</a></li>
+                <li class="nav-item"><a id='githubURL' href="{% url 'social:begin' 'github' %}">
+                    <i class="fa fa-github" style="font-size:24px" href="{% url 'social:begin' 'github' %}"></i>
+                    Login with GitHub
+                </a></li>
                 {% endif %}
             </ul>
             <!-- nav bar 2nd line -->
