--- a/templates/rango/page.html
+++ b/templates/rango/page.html
@@ -8,32 +8,10 @@
 {% block cssblock %}
 <link href="{% static 'rango_css/page.css' %}" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% endblock %}
 
-<script>
-    $('#page_id').onclick(function () {
-        var title=request.page.title
-        $.ajax({
-            url: '/ajax/like_count/',
-            data: {'page_title': title, },
-            dataType: 'json',
-            success: function (data) {
-                $('#like_count').repalceWith(data.likes)
-            }
-        });
-    })
-    $('#view_count').onclick(function () {
-        var title=request.page.title
-        $.ajax({
-            url: '/ajax/view_count/',
-            data: {'page_title': title, },
-            dataType: 'json',
-            success: function (data) {
-                $('#view_count').repalceWith(data.views)
-            }
-        });
-    })
-</script>
-
+{% block JS_block %}
+<script src="rango_js/page.js"></script>
 {% endblock %}
 
 {% block body_block %}
