--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -52,7 +52,7 @@ Homepage
         <div class="col-md-6">
             <div class="card h-100 mb-6">
                 <div class="card-body">
-                    <h2>Most Liked Categories</h2>
+                    <h2>Most Popular Categories</h2>
                     <p class="card-text">
                         {% if categories %}
                     <ul class="list-group">
