--- a/templates/rango/page.html
+++ b/templates/rango/page.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block JS_block %}
-<script src="rango_js/page.js"></script>
+<script src="{% static 'rango_js/page.js' %}"></script>
 {% endblock %}
 
 {% block body_block %}
