--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,42 +1,30 @@
 {% extends 'rango/base.html' %}
+{% load staticfiles %}
 
 {% block title_block %}
     Change Password
 {% endblock %}
 
+{% block cssblock %}
+    <style>
+        #fieldtitle {
+            font-size:30px;
+        }
+
+        #reminder{
+            text-indent: 50px;
+            color: rgb(20, 6, 82);
+            font-size:15px;
+        }
+    </style>
+{% endblock %}
+
+{% block JS_block %}
+<script src="{% static 'rango_js/pw_ch_form.js' %}"></script>
+{% endblock %}
 
 
 {% block body_block %}
-<style>
-    #fieldtitle {
-        font-size:30px;
-    }
-
-    #reminder{
-        text-indent: 50px;
-        color: rgb(20, 6, 82);
-        font-size:15px;
-    }
-</style>
-
-<script type="text/javascript">  
-    var passwordvalidate = function() {
-      if (document.getElementById('id_new_password1').value == document.getElementById('id_new_password2').value) {
-             document.getElementById('validationmessage').style.color = 'green';
-             document.getElementById('validationmessage').innerHTML = 'Password Matched';
-     } else {
-             document.getElementById('validationmessage').style.color = 'red';
-             document.getElementById('validationmessage').innerHTML = 'Password not match';
-             }
-     }
-
-     
- </script>
-
-
-
-
-
 <div class="container pt-5">
     <div class="container">
         <h class = "display-4 text-danger">
