--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,34 +1,23 @@
 {% extends 'rango/base.html' %}
-
-
+{% load staticfiles %}
 
 {% block title_block %}
 Create your Account
 {% endblock %}
 
+{% block cssblock %}
+    <style>
+        #questionheader {
+            font-weight: bold;
+        }
+    </style>
+{% endblock %}
+
+{% block JS_block %}
+<script src="{% static 'rango_js/reg_form.js' %}"></script>
+{% endblock %}
+
 {% block body_block %}
-<script type="text/javascript">  
-    var passwordvalidate = function() {
-      if (document.getElementById('id_password1').value == document.getElementById('id_password2').value) {
-             document.getElementById('validationmessage').style.color = 'green';
-             document.getElementById('validationmessage').innerHTML = 'Password Matched';
-     } else {
-             document.getElementById('validationmessage').style.color = 'red';
-             document.getElementById('validationmessage').innerHTML = 'Password not match';
-             }
-     }
-
-     
- </script>
-
- 
-
-<style>
-    #questionheader {
-        font-weight: bold;
-    }
-</style>
-
     <div class="container pt-5">
         <h class = "display-4 text-danger";>Create Your Account -- Step 1</h> 
     </div>
